tests/reference/asr-goto_undefined_label-22939fc.stderr
semantic error: Label 20 is not defined
 --> tests/errors/goto_undefined_label.f90:2:3
  |
2 |   goto 20
  |   ^^^^^^^ 
